<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F0F6">


    <ImageView
        android:id="@+id/back_imz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_baseline_arrow_back"
        app:layout_constraintEnd_toStartOf="@id/signin_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/signIn"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back_imz"
        app:layout_constraintStart_toEndOf="@id/back_imz"
        app:layout_constraintTop_toTopOf="@id/back_imz" />


    <EditText
        android:id="@+id/text_emaillogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="#fff"
        android:backgroundTint="#7AFFFFFF"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#9A000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_text" />

    <EditText
        android:id="@+id/text_passwordlogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:background="#fff"
        android:backgroundTint="#7AFFFFFF"
        android:hint="@string/password"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#9A000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_emaillogin"
        tools:ignore="TextFields" />


    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_styleregister"
        android:padding="10dp"
        android:text="Sign in"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_passwordlogin" />

    <TextView
        android:id="@+id/text_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signin" />

    <TextView
        android:id="@+id/text_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="-- OR --"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_forgot" />


    <TextView
        android:id="@+id/text_notacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/notaccount"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="#D81B60"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/text_notacc"
        app:layout_constraintStart_toEndOf="@id/text_notacc"
        app:layout_constraintTop_toTopOf="@id/text_notacc" />
</androidx.constraintlayout.widget.ConstraintLayout>