<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F0F6">

    <ImageView
        android:id="@+id/back_imz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_baseline_arrow_back"
        app:layout_constraintEnd_toStartOf="@id/register_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="Register"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back_imz"
        app:layout_constraintStart_toEndOf="@id/back_imz"
        app:layout_constraintTop_toTopOf="@id/back_imz" />


    <EditText
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="#fff"
        android:backgroundTint="#7AFFFFFF"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#9A000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text" />

    <EditText
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:background="#fff"
        android:backgroundTint="#7AFFFFFF"
        android:hint="Username"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#9A000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:background="#fff"
        android:backgroundTint="#7AFFFFFF"
        android:hint="Password"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textColor="#9A000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_username" />

    <EditText
        android:id="@+id/text_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="30dp"
        android:background="#fff"
        android:backgroundTint="#7AFFFFFF"
        android:hint="Confirm Password"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textColor="#9A000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password" />

    <Button
        android:id="@+id/text_createaccount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_styleregister"
        android:padding="10dp"
        android:text="Create an account"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_confirmpassword" />

    <TextView
        android:id="@+id/text_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/terms"
        android:textAllCaps="true"
        android:textColor="#9A000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/text_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/account"
        android:textAllCaps="true"
        android:textColor="#9A000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/signin"
        android:textColor="#D81B60"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/text_account"
        app:layout_constraintStart_toEndOf="@id/text_account" />
</androidx.constraintlayout.widget.ConstraintLayout>